--- a/.github/workflows/dashboard.yml
+++ b/.github/workflows/dashboard.yml
@@ -7,23 +7,25 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-      - name: Generate Dashboard
-        uses: ethomson/issue-dashboard@v1
-        with:
-          config: |
-            title: 'GitHub Actions Dashboard'
-            output:
-              format: html
-              filename: 'dashboard.html'
-            sections:
-            - title: 'Executed Jobs'
-              widgets:
-              - type: 'table'
-                title: 'Recent Jobs'
-                issue_query: 'repo:saravananjobs2017/github-actions-test is:issue is:success sort:created-desc'
-          token: ${{ secrets.PAT_TOKEN }}
-      - name: Upload Dashboard
-        uses: actions/upload-artifact@v3
-        with:
-          name: dashboard
-          path: dashboard.html
+      # - name: Generate Dashboard
+      #   uses: ethomson/issue-dashboard@v1
+      #   with:
+      #     config: |
+      #       title: 'GitHub Actions Dashboard'
+      #       output:
+      #         format: html
+      #         filename: 'dashboard.html'
+      #       sections:
+      #       - title: 'Executed Jobs'
+      #         widgets:
+      #         - type: 'table'
+      #           title: 'Recent Jobs'
+      #           issue_query: 'repo:saravananjobs2017/github-actions-test is:issue is:success sort:created-desc'
+      #     token: ${{ secrets.PAT_TOKEN }}
+      - name: run curl
+        run: |
+         response=$(curl -u "saravanan.dhanapal@accenture.com:ATATT3xFfGF0TgYOaSE0u9k0iCfRzvb1EQWykdosPd2e-8R9Hf2VCbbSsYVBd-FVzZY2c8okBpdBOwUWHCRfd_jr5NBsaUq1S5Fv6hN3h6wwPO8Di_NaFc4EbOcCFmiomj3sJ7_w4erQH5AwtIDt2agvhewANdJHpZKzMC2Q8ZC9Jt2cCTaDb1s=0D272DE9" \
+         -X GET "https://eqn-nextgen.atlassian.net/rest/api/3/issue/TESTING-20" \
+         -H "Accept: application/json" | jq -r '.[0].emailAddress')
+         echo $response
+         
