--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
          FIRST_TWO_CHARS="${FIRST_TWO_CHARS:0:2}"
          echo $FIRST_TWO_CHARS
          echo "FIRST_TWO_CHARS=$FIRST_TWO_CHARS" >> $GITHUB_ENV
-         response=$(curl -v --location 'https://equinor.qtestnet.com/api/v3/projects/119783/modules?search=$FIRST_TWO_CHARS' \
+         response=$(curl -v --location "https://equinor.qtestnet.com/api/v3/projects/119783/modules?search=$FIRST_TWO_CHARS" \
           --header 'Authorization: Bearer ca42f96c-8c1e-4868-b0cd-5d1f7ad57f21')
          echo $response
          echo $response | jq -r '.[0].id'
