--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,6 +32,16 @@ jobs:
           --header 'Authorization: Bearer ca42f96c-8c1e-4868-b0cd-5d1f7ad57f21')
          echo $response
          echo $response | jq -r '.[0].id'
+
+         # pass the parent id to get the descendants information.
+         response1=$(curl --location 'https://equinor.qtestnet.com/api/v3/projects/119783/modules/10714196?expand=descendants' \
+         --header 'Authorization: Bearer ca42f96c-8c1e-4868-b0cd-5d1f7ad57f21')
+         echo $response1
+         echo $response1 | jq -r '.children[].id'
+
+         
+         
+         
        
 
         #Important code:
