--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,11 +41,51 @@ jobs:
          echo $child_ids
          for id in "${child_ids[@]}"; do
             echo "Processing ID: $id"
-            curl --location "https://equinor.qtestnet.com/api/v3/projects/119783/test-cases?parentId=$id" \
-              --header "Authorization: Bearer ca42f96c-8c1e-4868-b0cd-5d1f7ad57f21"
-         done
-         
-         
+            result=$(curl --location "https://equinor.qtestnet.com/api/v3/projects/119783/test-cases?parentId=$id" \
+              --header "Authorization: Bearer ca42f96c-8c1e-4868-b0cd-5d1f7ad57f21")
+              # Ensure response is valid JSON before passing it to Python
+            if [ -z "$response" ]; then
+              echo "API response is empty!"
+              exit 1
+            fi
+            # Process JSON in Python and store the result
+            RESULT=$(python3 -c "import json, sys; 
+            data = json.loads(sys.argv[1]); 
+            ids = [(item['id'], item['name']) for item in data]; 
+            print(json.dumps(ids))" "$response")
+            # python3 - <<EOF
+            #     import json
+            #     import requests
+            #     import os
+                
+            #     # # Get the environment variable
+            #     # val = os.getenv("RESULT", "[]")  # Default to empty list if missing
+                
+            #     print(f"From Python validation: {val}")
+                
+            #     # Convert JSON string back to list
+            #     try:
+            #         data = json.loads(val)  # Ensure it's parsed as JSON
+            #         for item in data:
+            #             url = "https://equinor.qtestnet.com/api/v3/projects/119783/test-runs?parentId=7409360&parentType=test-suite"
+            #             payload = json.dumps({
+            #                 "name": item[1],  # Correctly access the name value
+            #                 "test_case": {
+            #                     "id": item[0]  # Correctly access the test case ID
+            #                 }
+            #             })
+            #             headers = {
+            #                 "Content-Type": "application/json",
+            #                 "Authorization": "Bearer ca42f96c-8c1e-4868-b0cd-5d1f7ad57f21"
+            #             }
+            #             response = requests.post(url, headers=headers, data=payload)  # Use `post` for clarity
+            #             print(response.text)
+            #     except json.JSONDecodeError as e:
+            #         print(f"Error parsing JSON: {e}")
+            #     EOF
+          done
+          
+          
        
 
         #Important code:
@@ -107,64 +147,64 @@ jobs:
                           
 
       
-      # - name: Print Full Payload
-      #   run: echo "${{ toJson(github.event.client_payload) }}"
+      # # - name: Print Full Payload
+      # #   run: echo "${{ toJson(github.event.client_payload) }}"
 
-      # - name: Print Issue Key
-      #   run: echo "Issue Key=${{ github.event.client_payload.issueKey }}"
+      # # - name: Print Issue Key
+      # #   run: echo "Issue Key=${{ github.event.client_payload.issueKey }}"
 
-      # - name: Print Summary
-      #   run: echo "Summary=${{ github.event.client_payload.summary }}"
+      # # - name: Print Summary
+      # #   run: echo "Summary=${{ github.event.client_payload.summary }}"
 
-      # - name: Print env values
-      #   run: cat $GITHUB_ENV
+      # # - name: Print env values
+      # #   run: cat $GITHUB_ENV
 
-      # - name: Print Custom Field
-      #   run: echo "snow_chg_id:" ${{ github.event.client_payload.snow_chg_id }}
+      # # - name: Print Custom Field
+      # #   run: echo "snow_chg_id:" ${{ github.event.client_payload.snow_chg_id }}
 
-      # - name: Print assignee
-      #   run: echo "Assignee:" ${{ github.event.client_payload.assignee }}
+      # # - name: Print assignee
+      # #   run: echo "Assignee:" ${{ github.event.client_payload.assignee }}
 
-      # - name: Print description
-      #   run: echo "Description:" ${{ github.event.client_payload.description }}
+      # # - name: Print description
+      # #   run: echo "Description:" ${{ github.event.client_payload.description }}
 
-      # - name: Update charm id in jira
-      #   shell: bash
-      #   # env:
-      #   #   ISSUE_KEY: "TESTING-18"
-      #   #   CHARM_ID: "1234567"  # Set CHARM_ID directly
-      #   run: |
-      #      response_code=$(curl -o /dev/null -s -w "%{http_code}" -X PUT \
-      #        -u "${{secrets.JIRA_API_USER}}:${{secrets.JIRA_API_TOKEN}}" \
-      #        -H "Content-Type: application/json" \
-      #        -d '{
-      #              "fields": {
-      #                "customfield_10440": "'"123456"'"
-      #              }
-      #            }' \
-      #        "https://your-domain.atlassian.net/rest/api/3/issue/TESTING-18")
-      #      if [ "$response_code" -eq 200 ] || [ "$response_code" -eq 204 ]; 
-      #      then
-      #        echo "Success: The request was successful with status code $response_code."
-      #      else
-      #        echo "Error: The request failed with status code $response_code"
-      #        exit 1
-      #      fi
+      # # - name: Update charm id in jira
+      # #   shell: bash
+      # #   # env:
+      # #   #   ISSUE_KEY: "TESTING-18"
+      # #   #   CHARM_ID: "1234567"  # Set CHARM_ID directly
+      # #   run: |
+      # #      response_code=$(curl -o /dev/null -s -w "%{http_code}" -X PUT \
+      # #        -u "${{secrets.JIRA_API_USER}}:${{secrets.JIRA_API_TOKEN}}" \
+      # #        -H "Content-Type: application/json" \
+      # #        -d '{
+      # #              "fields": {
+      # #                "customfield_10440": "'"123456"'"
+      # #              }
+      # #            }' \
+      # #        "https://your-domain.atlassian.net/rest/api/3/issue/TESTING-18")
+      # #      if [ "$response_code" -eq 200 ] || [ "$response_code" -eq 204 ]; 
+      # #      then
+      # #        echo "Success: The request was successful with status code $response_code."
+      # #      else
+      # #        echo "Error: The request failed with status code $response_code"
+      # #        exit 1
+      # #      fi
 
-      # - name: Generate OAuth Token
-      #   id: generate_token
-      #   # env:
-      #   #    JIRA_API_USER: ${{ secrets.JIRA_API_USER }}
-      #   #    JIRA_API_TOKEN: ${{ secrets.JIRA_API_TOKEN }}
-      #   #    # SAP_CLIENT_ID: ${{ secrets.SAP_CLIENT_ID }}
-      #      # SAP_CLIENT_SECRET: ${{ secrets.SAP_CLIENT_SECRET }}
-      #      # SAP_TOKEN_URL: ${{ secrets.SAP_TOKEN_URL }}
-      #      # SAP_CLIENT_ID: h3kpK9Dsh8i51WTZRA50Se7H4GTEcQ3x
-      #      # SAP_CLIENT_SECRET: tttRQgsmV4ocIuJa
-      #      # SAP_TOKEN_URL: https://devequinor.test.apimanagement.eu10.hana.ondemand.com:443/v2/oauth2/token
-      #   run: |
-      #         response=$(curl -X GET \
-      #         -u "${{ secrets.JIRA_API_USER }}:${{ secrets.JIRA_API_TOKEN }}" \
+      # # - name: Generate OAuth Token
+      # #   id: generate_token
+      # #   # env:
+      # #   #    JIRA_API_USER: ${{ secrets.JIRA_API_USER }}
+      # #   #    JIRA_API_TOKEN: ${{ secrets.JIRA_API_TOKEN }}
+      # #   #    # SAP_CLIENT_ID: ${{ secrets.SAP_CLIENT_ID }}
+      # #      # SAP_CLIENT_SECRET: ${{ secrets.SAP_CLIENT_SECRET }}
+      # #      # SAP_TOKEN_URL: ${{ secrets.SAP_TOKEN_URL }}
+      # #      # SAP_CLIENT_ID: h3kpK9Dsh8i51WTZRA50Se7H4GTEcQ3x
+      # #      # SAP_CLIENT_SECRET: tttRQgsmV4ocIuJa
+      # #      # SAP_TOKEN_URL: https://devequinor.test.apimanagement.eu10.hana.ondemand.com:443/v2/oauth2/token
+      # #   run: |
+      # #         response=$(curl -X GET \
+      # #         -u "${{ secrets.JIRA_API_USER }}:${{ secrets.JIRA_API_TOKEN }}" \
       #         -H "Content-Type: application/json" \
       #          https://eqn-nextgen.atlassian.net/rest/api/2/issue/TESTING-18| grep -o '"customfield_10440":"[^"]*"' | sed 's/.*:"//;s/"$//')
       #         echo $response
