--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,66 +24,157 @@ jobs:
 
       - name: Fetch values
         run: |
-         FIRST_TWO_CHARS="05.04 - Fixed Asset Accounting" 
-         FIRST_TWO_CHARS="${FIRST_TWO_CHARS:0:2}"
-         echo $FIRST_TWO_CHARS
-         echo "FIRST_TWO_CHARS=$FIRST_TWO_CHARS" >> $GITHUB_ENV
-         response=$(curl -v --location "https://equinor.qtestnet.com/api/v3/projects/119783/modules?search=$FIRST_TWO_CHARS" \
-          --header 'Authorization: Bearer ca42f96c-8c1e-4868-b0cd-5d1f7ad57f21')
-         echo $response
-         echo $response | jq -r '.[0].id'
+          # Extract the first two characters from a string
+          FIRST_TWO_CHARS="05.04 - Fixed Asset Accounting"
+          FIRST_TWO_CHARS="${FIRST_TWO_CHARS:0:2}"
+          echo "Extracted FIRST_TWO_CHARS: $FIRST_TWO_CHARS"
+          echo "FIRST_TWO_CHARS=$FIRST_TWO_CHARS" >> $GITHUB_ENV
+          
+          # Fetch module data based on search query
+          response=$(curl --silent --location "https://equinor.qtestnet.com/api/v3/projects/119783/modules?search=$FIRST_TWO_CHARS" \
+            --header "Authorization: Bearer ca42f96c-8c1e-4868-b0cd-5d1f7ad57f21")
 
-         # pass the parent id to get the descendants information.
-         response1=$(curl --location 'https://equinor.qtestnet.com/api/v3/projects/119783/modules/10714196?expand=descendants' \
-         --header 'Authorization: Bearer ca42f96c-8c1e-4868-b0cd-5d1f7ad57f21')
-         # echo $response1 | jq -r '.children[].id'
-         child_ids=($(echo "$response1" | jq -r '.children[].id'))
-         echo $child_ids
-         for id in "${child_ids[@]}"; do
-            echo "Processing ID: $id"
-            result=$(curl --location "https://equinor.qtestnet.com/api/v3/projects/119783/test-cases?parentId=$id" \
+          echo "Response from module search: $response"
+
+          # Extract first module ID
+          PARENT_ID=$(echo "$response" | jq -r '.[0].id')
+
+          if [[ -z "$PARENT_ID" || "$PARENT_ID" == "null" ]]; then
+            echo "Error: No parent module found!"
+            exit 1
+          fi
+
+          echo "Extracted Parent ID: $PARENT_ID"
+
+          # Fetch descendants of the parent module
+          response1=$(curl --silent --location "https://equinor.qtestnet.com/api/v3/projects/119783/modules/$PARENT_ID?expand=descendants" \
+            --header "Authorization: Bearer ca42f96c-8c1e-4868-b0cd-5d1f7ad57f21")
+
+          # Extract child IDs
+          child_ids=($(echo "$response1" | jq -r '.children[].id'))
+
+          if [ ${#child_ids[@]} -eq 0 ]; then
+            echo "No child modules found!"
+            exit 1
+          fi
+
+          echo "Extracted Child IDs: ${child_ids[@]}"
+
+          # Loop through child IDs and fetch test cases
+          for id in "${child_ids[@]}"; do
+            echo "Processing Child ID: $id"
+
+            result=$(curl --silent --location "https://equinor.qtestnet.com/api/v3/projects/119783/test-cases?parentId=$id" \
               --header "Authorization: Bearer ca42f96c-8c1e-4868-b0cd-5d1f7ad57f21")
-              # Ensure response is valid JSON before passing it to Python
-            if [ -z "$response" ]; then
-              echo "API response is empty!"
-              exit 1
+
+            if [[ -z "$result" || "$result" == "null" ]]; then
+              echo "Error: No test cases found for Parent ID: $id"
+              continue
             fi
-            # Process JSON in Python and store the result
+
+            # Process JSON and extract test case ID & name
             RESULT=$(python3 -c "import json, sys; 
-            data = json.loads(sys.argv[1]); 
-            ids = [(item['id'], item['name']) for item in data]; 
-            print(json.dumps(ids))" "$response")
-            # python3 - <<EOF
-            #     import json
-            #     import requests
-            #     import os
+            data = json.loads(sys.stdin.read()); 
+            print(json.dumps([(item['id'], item['name']) for item in data]))" <<< "$result")
+
+            if [[ -z "$RESULT" || "$RESULT" == "[]" ]]; then
+              echo "No valid test cases found!"
+              continue
+            fi
+
+            echo "Extracted test cases: $RESULT"
+
+            # Pass extracted data to Python script for test-run creation
+            python3 <<EOF
+          import json
+          import requests
+          import os
+
+          # Load extracted test case data
+          val = '''$RESULT'''
+          print(f"From Python validation: {val}")
+
+          # Convert JSON string to list
+          try:
+              data = json.loads(val)
+              for item in data:
+                  url = "https://equinor.qtestnet.com/api/v3/projects/119783/test-runs?parentId=7409360&parentType=test-suite"
+                  payload = json.dumps({
+                      "name": item[1],
+                      "test_case": {"id": item[0]}
+                  })
+                  headers = {
+                      "Content-Type": "application/json",
+                      "Authorization": "Bearer ca42f96c-8c1e-4868-b0cd-5d1f7ad57f21"
+                  }
+                  response = requests.post(url, headers=headers, data=payload)
+                  print("Test Run Response:", response.text)
+          except json.JSONDecodeError as e:
+              print(f"Error parsing JSON: {e}")
+          EOF
+
+      # - name: Fetch values
+      #   run: |
+      #    FIRST_TWO_CHARS="05.04 - Fixed Asset Accounting" 
+      #    FIRST_TWO_CHARS="${FIRST_TWO_CHARS:0:2}"
+      #    echo $FIRST_TWO_CHARS
+      #    echo "FIRST_TWO_CHARS=$FIRST_TWO_CHARS" >> $GITHUB_ENV
+      #    response=$(curl -v --location "https://equinor.qtestnet.com/api/v3/projects/119783/modules?search=$FIRST_TWO_CHARS" \
+      #     --header 'Authorization: Bearer ca42f96c-8c1e-4868-b0cd-5d1f7ad57f21')
+      #    echo $response
+      #    echo $response | jq -r '.[0].id'
+
+      #    # pass the parent id to get the descendants information.
+      #    response1=$(curl --location 'https://equinor.qtestnet.com/api/v3/projects/119783/modules/10714196?expand=descendants' \
+      #    --header 'Authorization: Bearer ca42f96c-8c1e-4868-b0cd-5d1f7ad57f21')
+      #    # echo $response1 | jq -r '.children[].id'
+      #    child_ids=($(echo "$response1" | jq -r '.children[].id'))
+      #    echo $child_ids
+      #    for id in "${child_ids[@]}"; do
+      #       echo "Processing ID: $id"
+      #       result=$(curl --location "https://equinor.qtestnet.com/api/v3/projects/119783/test-cases?parentId=$id" \
+      #         --header "Authorization: Bearer ca42f96c-8c1e-4868-b0cd-5d1f7ad57f21")
+      #         # Ensure response is valid JSON before passing it to Python
+      #       if [ -z "$response" ]; then
+      #         echo "API response is empty!"
+      #         exit 1
+      #       fi
+      #       # Process JSON in Python and store the result
+      #       RESULT=$(python3 -c "import json, sys; 
+      #       data = json.loads(sys.argv[1]); 
+      #       ids = [(item['id'], item['name']) for item in data]; 
+      #       print(json.dumps(ids))" "$response")
+      #       python3 - <<EOF
+      #           import json
+      #           import requests
+      #           import os
                 
-            #     # # Get the environment variable
-            #     # val = os.getenv("RESULT", "[]")  # Default to empty list if missing
+      #           # # Get the environment variable
+      #           # val = os.getenv("RESULT", "[]")  # Default to empty list if missing
                 
-            #     print(f"From Python validation: {val}")
+      #           print(f"From Python validation: {val}")
                 
-            #     # Convert JSON string back to list
-            #     try:
-            #         data = json.loads(val)  # Ensure it's parsed as JSON
-            #         for item in data:
-            #             url = "https://equinor.qtestnet.com/api/v3/projects/119783/test-runs?parentId=7409360&parentType=test-suite"
-            #             payload = json.dumps({
-            #                 "name": item[1],  # Correctly access the name value
-            #                 "test_case": {
-            #                     "id": item[0]  # Correctly access the test case ID
-            #                 }
-            #             })
-            #             headers = {
-            #                 "Content-Type": "application/json",
-            #                 "Authorization": "Bearer ca42f96c-8c1e-4868-b0cd-5d1f7ad57f21"
-            #             }
-            #             response = requests.post(url, headers=headers, data=payload)  # Use `post` for clarity
-            #             print(response.text)
-            #     except json.JSONDecodeError as e:
-            #         print(f"Error parsing JSON: {e}")
-            #     EOF
-          done
+      #           # Convert JSON string back to list
+      #           try:
+      #               data = json.loads(val)  # Ensure it's parsed as JSON
+      #               for item in data:
+      #                   url = "https://equinor.qtestnet.com/api/v3/projects/119783/test-runs?parentId=7409360&parentType=test-suite"
+      #                   payload = json.dumps({
+      #                       "name": item[1],  # Correctly access the name value
+      #                       "test_case": {
+      #                           "id": item[0]  # Correctly access the test case ID
+      #                       }
+      #                   })
+      #                   headers = {
+      #                       "Content-Type": "application/json",
+      #                       "Authorization": "Bearer ca42f96c-8c1e-4868-b0cd-5d1f7ad57f21"
+      #                   }
+      #                   response = requests.post(url, headers=headers, data=payload)  # Use `post` for clarity
+      #                   print(response.text)
+      #           except json.JSONDecodeError as e:
+      #               print(f"Error parsing JSON: {e}")
+      #           EOF
+      #     done
           
           
        
