--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,27 +26,35 @@ jobs:
         run: |
           set -e  # Stop script on any error
 
-          test-suite-id=$(curl  --location 'https://equinor.qtestnet.com/api/v3/projects/119783/test-suites?parentId=5332831&parentType=test-cycle'  --header 'Content-Type: application/json' --header 'Authorization: Bearer ca42f96c-8c1e-4868-b0cd-5d1f7ad57f21'      --data "$(cat <<EOF
+         - name: Create Test Suite
+  run: |
+  
+      test_suite_id=$(curl --location 'https://equinor.qtestnet.com/api/v3/projects/119783/test-suites?parentId=5332831&parentType=test-cycle' \
+      --header 'Content-Type: application/json' \
+      --header 'Authorization: Bearer ca42f96c-8c1e-4868-b0cd-5d1f7ad57f21' \
+      --data "$(jq -n --arg name '05.04 - Fixed Asset Accounting' \
+        --arg plannedStart "$(date -u +"%Y-%m-%dT%H:%M:%S%z" | sed -E 's/([0-9]{2})([0-9]{2})$/\1:\2/')" \
+        --arg plannedEnd "$(date -u +"%Y-%m-%dT%H:%M:%S%z" | sed -E 's/([0-9]{2})([0-9]{2})$/\1:\2/')" \
+        '{
+          name: $name,
+          properties: [
             {
-            "name": "05.04 - Fixed Asset Accounting",
-            "properties": [
-              {
-                "field_id": -201,
-                "field_name": "Planned Start Date",
-                "field_value": "$(date -u +"%Y-%m-%dT%H:%M:%S%z" | sed -E 's/([0-9]{2})([0-9]{2})$/\1:\2/')",
-                "field_value_name": "1"
-              },
-              {
-                "field_id": -200,
-                "field_name": "Planned End Date",
-                "field_value": "$(date -u +"%Y-%m-%dT%H:%M:%S%z" | sed -E 's/([0-9]{2})([0-9]{2})$/\1:\2/')",
-                "field_value_name": "1"
-              }
-            ]
-              }
-            EOF
-            )"
-          )
+              field_id: -201,
+              field_name: "Planned Start Date",
+              field_value: $plannedStart,
+              field_value_name: "1"
+            },
+            {
+              field_id: -200,
+              field_name: "Planned End Date",
+              field_value: $plannedEnd,
+              field_value_name: "1"
+            }
+          ]
+        }')"
+        )
+          echo "Test Suite ID: $test_suite_id"
+
           echo $test-suite-id
           # Extract the first two characters from a string
           FIRST_TWO_CHARS="05.04 - Fixed Asset Accounting"
